--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer style="background-color: white; position:fixed;bottom: 0;width:100%;text-align: center;">
+        <a style="text-align:center">Created by killallskywalker</a>
+    </footer>
   </body>
 </html>
